tests/ui/semantic_duplicate_named_arg.ql
fn main() {
    run(left: 1, left: 2)
}
